--- a/welcome/welcome.html
+++ b/welcome/welcome.html
@@ -43,14 +43,14 @@
                     <input type="text" id="dni" required>
                 </div>
                 <div class="form-login__input-item-login">
-                    <label for="contrasena">Contraseña</label>
-                    <input type="text" id="contrasena" required>
+                    <label for="password">Contraseña</label>
+                    <input type="text" id="password" required>
                 </div>
                 <div class="form-login__input-item-login">
                     <input type="button" id="button-login" value="Ingresar">
                 </div>
-                <a href="#forgot-password">Olvidé mi contraseña.</a>
             </form>
+            <a class="form-login__forgot-passw" href="#forgot-password">Olvidé mi contraseña.</a>
         </article>
     </main>
     
