--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Inicio</title>
 </head>
 <body>
-    <h1>Bienvenido a tu billetera Santa Fe.</h1>
+    <h1>Bienvenido <span>Usuario</span> a tu billetera Santa Fe.</h1>
 </body>
 </html>
