--- a/home.html
+++ b/home.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
 </head>
+
 <body>
-    <h1>Bienvenido <span>Usuario</span> a tu billetera Santa Fe.</h1>
+    <h1>Dni: <span id="userDNI">DNI</span></h1>
+
+    <script src="main.js"></script>
 </body>
+
 </html>
