--- a/welcome/welcome.html
+++ b/welcome/welcome.html
@@ -40,7 +40,7 @@
             <form class="welcome-right__form-login">
                 <div class="form-login__input-item-login">
                     <label for="dni">DNI</label>
-                    <input type="text" id="dni" required>
+                    <input type="number" id="dni" required>
                 </div>
                 <div class="form-login__input-item-login">
                     <label for="password">Contraseña</label>
